cabal-version:      3.0
name:               yah
version:            0.1.0.0
license:            NONE
build-type:         Simple


common warnings
    ghc-options: -Wall 
                 -O2
                -threaded
                "-with-rtsopts=-N"
                -- Strict was introduced with the RowVectorIO version.
                -XStrict
                
executable yah
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    YahDice
                    , YahRules
                    , Yahtzee

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.16.4.0
                , random
                , naturals
                , containers
                , sort
                , time
                , tuple
                , vector
                , parallel
                , deepseq
                , data-accessor
                , monad-parallel
                , async
    
    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
